속초해수욕장 모바일 제작중

--- a/views_m-/board/index.html
+++ b/views_m-/board/index.html
@@ -70,39 +70,66 @@
 		
 			<section class="wrap subVisual">
 				<div class="mainTxt container">
-					<p class="p-1">시원한 파도, 가슴벅찬 일출!</p>
-					<h2>속초해변 <span class="f-bd">공지사항</span></h2>
-					<p class="p-2"><span class="f-bdr">SOKCHO</span> BEACH</p>
+					<p class="p-1">닿는 발길마다 매력 넘치는 고성</p>
+					<h2><span class="f-bd">삼포해변</span> 공지사항</h2>
 				</div>
 			</section>
 			<section class="wrap cmStyle board">
 				<div class="container">
 					<div class="area">
-						<table class="tbStyle tb-read">
+						<table class="tbStyle tb-list">
 							<colgroup>
 								<col class="nth-1">
+								<col class="nth-2">
 							</colgroup>
 							<thead>
 								<tr>
-									<th>
-										7942(친구사이) 무료숙박권 이벤트는 뭔가요?
-										<span class="flt-r">2017-04-21</span>
-									</th>
+									<th>제목</th>
+									<th>작성일</th>
 								</tr>
 							</thead>
 							<tbody>
 								<tr>
-									<td>
-										고코투어에 회원가입을 하신 799,840명의 회원님들 중, 회원번호에 "7942"가 포함되어 있는 300명 회원님에게만 오션투유 무료숙박권을 
-										증정하는 이벤트입니다. 무료숙박권은 2018년 07월 19일까지 원하시는 날짜로 사전예약 후 이용하시면 됩니다.고코투어에 회원가입을 하신 799,840명의 회원님들 중, 회원번호에 "7942"가 포함되어 있는 300명 회원님에게만 오션투유 무료숙박권을 
-										증정하는 이벤트입니다. 무료숙박권은 2018년 07월 19일까지 원하시는 날짜로 사전예약 후 이용하시면 됩니다.고코투어에 회원가입을 하신 799,840명의 회원님들 중, 회원번호에 "7942"가 포함되어 있는 300명 회원님에게만 오션투유 무료숙박권을 
-										증정하는 이벤트입니다. 무료숙박권은 2018년 07월 19일까지 원하시는 날짜로 사전예약 후 이용하시면 됩니다.고코투어에 회원가입을 하신 799,840명의 회원님들 중, 회원번호에 "7942"가 포함되어 있는 300명 회원님에게만 오션투유 무료숙박권을 
-										증정하는 이벤트입니다. 무료숙박권은 2018년 07월 19일까지 원하시는 날짜로 사전예약 후 이용하시면 됩니다.
-									</td>
+									<td>삼포비치 홈페이지가 그랜드 오픈되었습니다.</td>
+									<td>2018.07.03</td>
+								</tr>
+								<tr>
+									<td>반짝이는 백사장 위로 쏟아지는 별빛을 볼 수 있는 삼포비치 홈페이지</td>
+									<td>2018.07.03</td>
+								</tr>
+								<tr>
+									<td>삼포비치 홈페이지가 그랜드 오픈되었습니다.</td>
+									<td>2018.07.03</td>
+								</tr>
+								<tr>
+									<td>반짝이는 백사장 위로 쏟아지는 별빛을 볼 수 있는 삼포비치 홈페이지</td>
+									<td>2018.07.03</td>
+								</tr>
+								<tr>
+									<td>삼포비치 홈페이지가 그랜드 오픈되었습니다.</td>
+									<td>2018.07.03</td>
+								</tr>
+								<tr>
+									<td>반짝이는 백사장 위로 쏟아지는 별빛을 볼 수 있는 삼포비치 홈페이지</td>
+									<td>2018.07.03</td>
+								</tr>
+								<tr>
+									<td>삼포비치 홈페이지가 그랜드 오픈되었습니다.</td>
+									<td>2018.07.03</td>
+								</tr>
+								<tr>
+									<td>반짝이는 백사장 위로 쏟아지는 별빛을 볼 수 있는 삼포비치 홈페이지</td>
+									<td>2018.07.03</td>
 								</tr>
 							</tbody>
 						</table>
-						<div class="row-btn"><a href="" class="btn-list">목록</a></div>
+						<div class="pagenation" id="pagenation">
+							<a class="prev" href="">&lt;</a>
+							<a class="on" href="">1</a>
+							<a href="">2</a>
+							<a href="">3</a>
+							<a class="next" href="">&gt;</a>
+						</div>
 					</div>
 				</div>
 			</section>
