--- a/views_m-/board/memory_write.html
+++ b/views_m-/board/memory_write.html
@@ -3,28 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>속초해수욕장</title>
+	<title>삼포해수욕장</title>
 	
 	<!--공통 폰트 및 css-->
 	<link rel="stylesheet" href="http://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css">
 	<link rel="stylesheet" href="http://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
-	<link rel="stylesheet" href="../../static/css/reset.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.css">
+	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/reset.css">
 	
 	<!--css-->
-<!--
-	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/common.css">
-	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/board/init.css">
--->
-	<link rel="stylesheet" href="../../static/css/common_m.css">
-	<link rel="stylesheet" href="../../static/css/board/init_m.css">
+	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/common_m.css">
+	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/board/init_m.css">
+	
+<!--	<link rel="stylesheet" href="../../static/css/board/init_m.css">-->
 	
 	<!--js-->
 	<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-<!--	<script src="http://static.sokchobeach.co.kr/js/board/init.js"></script>-->
-	<script src="../../static/js/common_m.js"></script>
-	<script src="../../static/js/board/init_m.js"></script>
+	<script src="http://static.sampobeach.co.kr/js/common_m.js"></script>
 	
 </head>
 <body>
@@ -32,37 +26,18 @@
 	<div class="wrapper">
 		
 		<header class="header">
-			<div class="wrap">
-				<div class="area container">
-					<h1 class="logo"><a href=""><img src="../../img/common/logo.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 로고</span></a></h1>
-					<button class="appe-reset nav-tab">
-						<span class="bar"></span>
-						<span class="bar"></span>
-						<span class="bar"></span>
-					</button>
-					<div class="weather">
-						<spana class="s1">흐림</spana><spana class="mg"></spana><spana class="c">35℃</spana>
-					</div>
-					<nav class="gnb">
-						<div class="bg-drop"></div>
-						<ul class="menu cf">
-							<li class="item-0">
-								<img src="../../img/common/logo.png" alt="속초해수욕장 로고"><span class="a-i-x i-x" onclick=""></span>
-								<p class="p-1">
-									가슴벅찬 일출, 시원한 파도<br>
-									대한민국의 자랑, 속초해변으로 오세요
-								</p>
-							</li>
-							<li class="item-1"><a href="../index.html">홈으로 <span class="ic-rArrow rArrow"></span></a></li>
-							<li class="item-1"><a href="../about/">속초해변 소개 <span class="ic-rArrow rArrow"></span></a></li>
-							<li class="item-2"><a href="../tourist/">관광정보 <span class="ic-rArrow rArrow"></span></a></li>
-							<li class="item-2"><a href="../view/">속초8경 <span class="ic-rArrow rArrow"></span></a></li>
-							<li class="item-3"><a href="../waycome/">오시는 길 <span class="ic-rArrow rArrow"></span></a></li>
-							<li class="item-4"><a href="../board/memory_list.html">추억게시판 <span class="ic-rArrow rArrow"></span></a></li>
-							<li class="item-5"><a href="../board/">공지사항 <span class="ic-rArrow rArrow"></span></a></li>
-						</ul>
-					</nav>
-				</div>
+			<div class="wrap container">
+				<h1 class="logo"><a href=""><img src="http://img.sampobeach.co.kr/common/logo.png" alt="삼포해수욕장 로고"> <span class="skip">삼포해수욕장 삼포비치</span></a></h1>
+				<nav class="gnb">
+					<ul class="menu cf">
+						<li class="item-1"><a href="">삼포해변 소개</a></li>
+						<li class="item-2"><a href="">축제 이벤트</a></li>
+						<li class="item-3"><a href="">오시는 길</a></li>
+						<li class="item-4"><a href="">주변관광</a></li>
+						<li class="item-5"><a href="">추억게시판</a></li>
+						<li class="item-6"><a href="">공지사항</a></li>
+					</ul>
+				</nav>
 			</div>
 		</header>
 		
@@ -70,14 +45,14 @@
 			<section class="wrap subVisual board-memory">
 				<div class="mainTxt container">
 					<p class="p-1">행복했던 어제, 즐거웠던 기억을 남겨보세요</p>
-					<h2><span class="f-bd">속초해변</span> 추억게시판</h2>
-					<p class="p-2"><span class="f-bdr">SOKCHO</span> BEACH</p>
+					<h2><span class="f-bd">삼포해변</span> 추억게시판</h2>
+					<p class="p-2"><span class="f-bdr">SAMPO</span> BEACH</p>
 				</div>
 			</section>
 			<section class="wrap cmStyle board board-memory">
 				<div class="container">
 					<h2 class="tit hidden">
-						<span class="sokcho"><span class="f-bd">sokcho</span> BEACH</span>
+						<span class="sampo"><span class="f-bd">SAMPO</span> BEACH</span>
 						<span class="f-bd">추억게시판 글쓰기</span>
 					</h2>
 					<div class="area area-1">
@@ -180,17 +155,22 @@
 		
 		<footer class="footer">
 			<div class="wrap container">
-				<figure class="logo"><img src="../../img/common/logo.png" alt="속초해수욕장로고"></figure>
+				<figure class="logo"><img src="http://img.sampobeach.co.kr/common/logo.png" alt="삼포해수욕장로고"></figure>
 				<address>
-					아름다운 속초해변 !  영롱한 바다는 물론이며 주변의 관광지인 <br>
-					설악산, 척산온천, 청초호, 영랑호와 더불어 <br>
-					속초시에 유일한 해수욕장으로 전국적인 사랑을 한 몸에 받고 있습니다.<br>
-					<p class="p-2">
-						본 사이트는 속초해수욕장을 사랑하는 주민자치회가 자체 운영합니다.<br>
-						대한민국 강원도 속초시 조양동 속초해수욕장
-					</p>
-					<small>copyright @ sokchobeach.co.kr All right reserved</small>
+					본 사이트는 삼포해변을 사랑하는 마을 주민회에서 운영하고 있습니다.<br>
+					오시는 길 : 강원도 고성군 죽왕면 삼포해변길 (죽왕면) / 삼포리 1-1번지 삼포해변<br>
+					<small>copyright @ sampobeach.co.kr All right reserved</small>
 				</address>
+				<nav class="gnb">
+					<ul class="menu cf">
+						<li class="item-1"><a href="">삼포해변 소개</a></li>
+						<li class="item-2"><a href="">축제 이벤트</a></li>
+						<li class="item-3"><a href="">오시는 길</a></li>
+						<li class="item-4"><a href="">주변관광</a></li>
+						<li class="item-5"><a href="">추억게시판</a></li>
+						<li class="item-6"><a href="">공지사항</a></li>
+					</ul>
+				</nav>
 			</div>
 		</footer>
 		
