--- a/views_m/about/index.html
+++ b/views_m/about/index.html
@@ -3,20 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>삼포해수욕장</title>
+	<title>속초해수욕장</title>
 	
 	<!--공통 폰트 및 css-->
 	<link rel="stylesheet" href="http://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css">
 	<link rel="stylesheet" href="http://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
-	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/reset.css">
-	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/common_m.css">
+	<link rel="stylesheet" href="../../static/css/reset.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.css">
 	
 	<!--css-->
-	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/about/init_m.css">
+<!--
+	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/common.css">
+	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/about/init.css">
+-->
+	<link rel="stylesheet" href="../../static/css/common_m.css">
+	<link rel="stylesheet" href="../../static/css/about/init_m.css">
 	
 	<!--js-->
 	<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="http://static.sampobeach.co.kr/js/common_m.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+<!--	<script src="http://static.sokchobeach.co.kr/js/about/init.js"></script>-->
+	<script src="../../static/js/common_m.js"></script>
+	<script src="../../static/js/about/init_m.js"></script>
 	
 </head>
 <body>
@@ -24,25 +32,37 @@
 	<div class="wrapper">
 		
 		<header class="header">
-			<div class="wrap container">
-				<h1 class="logo"><a href=""><img src="http://img.sampobeach.co.kr/common/logo.png" alt="삼포해수욕장 로고"> <span class="skip">삼포해수욕장 삼포비치</span></a></h1>
-				<button class="appe-reset nav-tab">
-					<span class="bar"></span>
-					<span class="bar"></span>
-					<span class="bar"></span>
-				</button>
-				<nav class="gnb">
-					<div class="bg-drop"></div>
-					<ul class="menu cf">
-						<li class="item-0"><img src="http://img.sampobeach.co.kr/common/logo.png" alt="삼포해수욕장 로고"><span class="a-i-x i-x" onclick=""></span></li>
-						<li class="item-1"><a href="">홈으로 <span class="ic-rArrow rArrow"></span></a></li>
-						<li class="item-1"><a href="">삼포해변 소개 <span class="ic-rArrow rArrow"></span></a></li>
-						<li class="item-2"><a href="">축제 이벤트 <span class="ic-rArrow rArrow"></span></a></li>
-						<li class="item-3"><a href="">오시는 길 <span class="ic-rArrow rArrow"></span></a></li>
-						<li class="item-4"><a href="">주변관광 <span class="ic-rArrow rArrow"></span></a></li>
-						<li class="item-5"><a href="">공지사항 <span class="ic-rArrow rArrow"></span></a></li>
-					</ul>
-				</nav>
+			<div class="wrap">
+				<div class="area container">
+					<h1 class="logo"><a href=""><img src="../../img/common/logo.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 로고</span></a></h1>
+					<button class="appe-reset nav-tab">
+						<span class="bar"></span>
+						<span class="bar"></span>
+						<span class="bar"></span>
+					</button>
+					<div class="weather">
+						<spana class="s1">흐림</spana><spana class="mg"></spana><spana class="c">35℃</spana>
+					</div>
+					<nav class="gnb">
+						<div class="bg-drop"></div>
+						<ul class="menu cf">
+							<li class="item-0">
+								<img src="../../img/common/logo.png" alt="속초해수욕장 로고"><span class="a-i-x i-x" onclick=""></span>
+								<p class="p-1">
+									가슴벅찬 일출, 시원한 파도<br>
+									대한민국의 자랑, 속초해변으로 오세요
+								</p>
+							</li>
+							<li class="item-1"><a href="../index.html">홈으로 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-1"><a href="../about/">속초해변 소개 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-2"><a href="../tourist/">관광정보 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-2"><a href="../view/">속초8경 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-3"><a href="../waycome/">오시는 길 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-4"><a href="../board/memory_list.html">추억게시판 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-5"><a href="../board/">공지사항 <span class="ic-rArrow rArrow"></span></a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
 		</header>
 		
@@ -50,69 +70,61 @@
 		
 			<section class="wrap subVisual">
 				<div class="mainTxt container">
-					<p class="p-1">동해안의 숨어있는 비경</p>
-					<h2><span class="f-bd">삼포해변</span> 소개</h2>
+					<p class="p-1">동해에서 만나는 다이나믹 비치</p>
+					<h2>내가 상상하던 바다, <span class="f-bd">속초해변</span> 소개</h2>
+					<p class="p-2"><span class="f-bdr">SOKCHO</span> BEACH</p>
 				</div>
 			</section>
 			<section class="wrap cmStyle about">
 				<div class="container">
 					<div class="area area-1">
 						<h3 class="h3-tit">
-							<span class="row-1">동해가 품은 아름다운 해변 ! <span class="sampo"><span class="f-bd">SAMPO</span> BEACH</span></span>
-							<span class="row-2"><span class="f-bd">삼포해수욕장</span>으로 초대합니다.</span>
+							<span class="row-1">동해가 품은 아름다운 해변 ! <span class="sokcho"><span class="f-bd">SOKCHO</span> BEACH</span></span>
+							<span class="row-2"><span class="f-bd">속초해수욕장</span>에서 여유를 만끽하세요.</span>
 						</h3>
-						<figure class="full"><img src="http://img.sampobeach.co.kr/about/beach_big.jpg" alt="삼포해변"></figure>
+						<figure class="full"><img src="../../img/m/about/beach_big.jpg" alt="속초해변"></figure>
 						<p class="showing">
-							속초에서 국도를 따라 북쪽으로 12km!  삼포해수욕장은 해당화와 울창한 소나무 솔숲으로 유명합니다.<br>
-							길이 800m, 폭 75m가 되는 모래사장에는 바닷말이 짙게 자라나 있고, 경사도 2~3도의 바닷가는 물깊이가 1~2m 정도로서 어느 곳에서도 해수욕의
-							즐거움을 한껏 누릴 수 있습니다.
+							속초해수욕장은 속초고속터미널에서 동쪽으로 500m 거리에 있는 해변으로 1976년 7월 1일 처음 개장했습니다. <br>
+							백사장의 길이는 청호동, 조양동, 대포동까지 총 연장 2km로 이 중 개장되는 곳은 1km, 폭 75m로 29,752m²(약 9,000평)에 달하며 모래의 질이 양호할 뿐만 아니라 수질이 청결하고 송림이 양호하여 속초시민과 외지인들이 즐겨찾는 곳으로 공원, 꽃길, 산책로가 조성되어 있습니다. <br>
+							또한, 주변의 주요 관광자원인 설악산, 척산온천, 청초호, 영랑호와 더불어 속초시를 종합관광지로 부상시키는데 커다란 몫을 담당하고 있고, 그 중요성과 필요성이 한층 더 돋보이고 있습니다. 
 						</p>
 						<p class="showing">
-							이곳의 모래는 '우는 모래'라는 뜻으로 불리며, 맞은편에는 흑도와 백도 그리고 호미섬이 있어 바다낚시터로도 사랑을 받고 있습니다.<br>
-							해수욕장 남쪽에는 백사장의 길이 700m, 폭 170m에 평균 수심 1.2m의 조건을 갖춘 삼포2리의 간이해변도 있어 더욱 큰 사랑을 받고 있습니다.
+							동해안 강원도 지역에 위치한 해변은 대략 십여 개가 넘지만 속초시에는 유독 단 한 군데의 해수욕장만이 자리하고 있습니다. 속초시의 유일무이한 해수욕장이기에 집중적인 관리로 다른 어느 해수욕장보다도 질서가 잘 잡혀있어 깔끔한 인상을 줍니다.
 						</p>
 						<p class="showing">
-							여름에는 많은 피서객의 행복한 쉼터로, 봄과 가을에는 호젓한 낭만의 해안으로 많은 손님들께 즐거움과 추억을 가득 드리고 있습니다.<br>
-							사계절 즐거움으로 가득한 삼포해수욕장에서 바다의 감동과 행복을 함께하세요.
+							속초 시내와 가깝고 조양동 고속터미널에서 500m 인근이라 휴가철뿐만 아니라 비수기나 동절기에도 찾아오는 방문객들이 많습니다. 특히, 설악산과 가까워 내설악 쪽에서 대청봉을 거쳐 설악동으로 내려오는 등산객들이 반드시 거쳐 가는 코스이기도 합니다. 인근에 위치한 대포항 또한, 값싸고 싱싱한 활어회로 유명하여 이곳 일대는 사시사철 관광객들로 인파를 이룹니다. 교통이 편리하기 때문에 꼭 해수욕이 아니더라도 언제든 잠시 들러 바다 구경하고 돌아가기에 좋습니다.
 						</p>
 						<figure class="half">
-							<img src="http://img.sampobeach.co.kr/about/beach_small_1.jpg" alt="삼포해변"><img src="http://img.sampobeach.co.kr/about/beach_small_2.jpg" alt="삼포해변">
-						</figure>
-					</div>
-					<div class="area area-2">
-						<h3 class="h3-tit">
-							<span class="row-1">사계절이 흥미로운 이벤트 ! <span class="sampo"><span class="f-bd">SAMPO</span> BEACH</span></span>
-							<span class="row-2"><span class="f-bd">다양한 축제</span>가 즐거움을 더합니다.</span>
-						</h3>
-						<figure class="half">
-							<img src="http://img.sampobeach.co.kr/about/beach_fiesta_1.jpg" alt="삼포해변축제"><img src="http://img.sampobeach.co.kr/about/beach_fiesta_2.jpg" alt="삼포해변축제">
+							<img src="../../img/about/beach_sm_1.jpg" alt="속초해변"><img src="../../img/about/beach_sm_2.jpg" alt="속초해변">
 						</figure>
 						<p class="showing">
-							해를 거듭할수록 더 흥미진진한 미드나잇피크닉 페스티벌 !<br>
-							서핑을 배워보고 세계 탑클래스의 서퍼와 함께하는 프로그램으로 누구나 손쉽게 배울수 있는 서핑 클래스가 있습니다.<br>
-							넓은 삼포해변에서 자유롭게 서핑을 할 수 있는 프리서핑존까지 다양한 서핑프로그램으로 웨이브하기 좋은 삼포해변으로 오세요. 
+							연중 상시 개방된 속초해변 중 속초8경 중 하나인 조도의 일출이 명소인 곳입니다.<br>
+							백사장에는 목재 산책로가 조성되어 있고, 백사장 뒷편에 송림이 잘 가꾸어져 있으며, 화장실, 샤워장 등 부대시설과 국민여가캠핑장, 주차장, 야영장 등이 충분히 확보되어 있으며 하계 휴가객을 위한 속초해수욕장을 매년 7월부터 8월까지 운영하고 있습니다.
 						</p>
 						<p class="showing">
-							여름 달빛이 백사장을 아름답게 비추는 삼포해변에서 대한민국 뮤직씬을 대표하는 아티스트들이 집결합니다.<br>
-							힙합과 밴드, DJ까지 그루브 넘치는 비치 파티, 뜨거운 여름이 더욱 빛나도록 신나는 시간을 선사합니다.
+							모든 것이 새롭게 만사가 여유러워지는 속초해변으로 놀러오세요.
 						</p>
 						<figure class="half">
-							<img src="http://img.sampobeach.co.kr/about/beach_fiesta_3.jpg" alt="삼포해변축제"><img src="http://img.sampobeach.co.kr/about/beach_fiesta_4.jpg" alt="삼포해변축제">
+							<img src="../../img/about/beach_sm_3.jpg" alt="속초해변축제"><img src="../../img/about/beach_sm_4.jpg" alt="속초해변축제">
 						</figure>
 					</div>
 				</div>
 			</section>
 			
-		</div>
+		</div>		
 		
 		<footer class="footer">
 			<div class="wrap container">
-				<figure class="logo"><img src="http://img.sampobeach.co.kr/common/logo.png" alt="삼포해수욕장로고"></figure>
+				<figure class="logo"><img src="../../img/common/logo.png" alt="속초해수욕장로고"></figure>
 				<address>
-					본 사이트는 삼포해변을 사랑하는 마을 주민회에서 운영하고 있습니다.<br>
-					강원도 고성군 죽왕면 삼포해변길 (죽왕면) / 삼포리 1-1번지 삼포해변<br>
-					help@sampobeach.co.kr<br>
-					<small>copyright @ sampobeach.co.kr All right reserved</small>
+					아름다운 속초해변 !  영롱한 바다는 물론이며 주변의 관광지인 <br>
+					설악산, 척산온천, 청초호, 영랑호와 더불어 <br>
+					속초시에 유일한 해수욕장으로 전국적인 사랑을 한 몸에 받고 있습니다.<br>
+					<p class="p-2">
+						본 사이트는 속초해수욕장을 사랑하는 주민자치회가 자체 운영합니다.<br>
+						대한민국 강원도 속초시 조양동 속초해수욕장
+					</p>
+					<small>copyright @ sokchobeach.co.kr All right reserved</small>
 				</address>
 			</div>
 		</footer>
