--- a/views_m/board/index.html
+++ b/views_m/board/index.html
@@ -3,20 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>삼포해수욕장</title>
+	<title>속초해수욕장</title>
 	
 	<!--공통 폰트 및 css-->
 	<link rel="stylesheet" href="http://cdn.rawgit.com/hiun/NanumSquare/master/nanumsquare.css">
 	<link rel="stylesheet" href="http://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css">
-	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/reset.css">
-	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/common_m.css">
+	<link rel="stylesheet" href="../../static/css/reset.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.css">
 	
 	<!--css-->
-	<link rel="stylesheet" href="http://static.sampobeach.co.kr/css/board/init_m.css">
+<!--
+	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/common.css">
+	<link rel="stylesheet" href="http://static.sokchobeach.co.kr/css/board/init.css">
+-->
+	<link rel="stylesheet" href="../../static/css/common_m.css">
+	<link rel="stylesheet" href="../../static/css/board/init_m.css">
 	
 	<!--js-->
 	<script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
-	<script src="http://static.sampobeach.co.kr/js/common_m.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+<!--	<script src="http://static.sokchobeach.co.kr/js/board/init.js"></script>-->
+	<script src="../../static/js/common_m.js"></script>
+	<script src="../../static/js/board/init_m.js"></script>
 	
 </head>
 <body>
@@ -24,25 +32,37 @@
 	<div class="wrapper">
 		
 		<header class="header">
-			<div class="wrap container">
-				<h1 class="logo"><a href=""><img src="http://img.sampobeach.co.kr/common/logo.png" alt="삼포해수욕장 로고"> <span class="skip">삼포해수욕장 삼포비치</span></a></h1>
-				<button class="appe-reset nav-tab">
-					<span class="bar"></span>
-					<span class="bar"></span>
-					<span class="bar"></span>
-				</button>
-				<nav class="gnb">
-					<div class="bg-drop"></div>
-					<ul class="menu cf">
-						<li class="item-0"><img src="http://img.sampobeach.co.kr/common/logo.png" alt="삼포해수욕장 로고"><span class="a-i-x i-x" onclick=""></span></li>
-						<li class="item-1"><a href="">홈으로 <span class="ic-rArrow rArrow"></span></a></li>
-						<li class="item-1"><a href="">삼포해변 소개 <span class="ic-rArrow rArrow"></span></a></li>
-						<li class="item-2"><a href="">축제 이벤트 <span class="ic-rArrow rArrow"></span></a></li>
-						<li class="item-3"><a href="">오시는 길 <span class="ic-rArrow rArrow"></span></a></li>
-						<li class="item-4"><a href="">주변관광 <span class="ic-rArrow rArrow"></span></a></li>
-						<li class="item-5"><a href="">공지사항 <span class="ic-rArrow rArrow"></span></a></li>
-					</ul>
-				</nav>
+			<div class="wrap">
+				<div class="area container">
+					<h1 class="logo"><a href=""><img src="../../img/common/logo.png" alt="속초해수욕장 로고"> <span class="skip">속초해수욕장 로고</span></a></h1>
+					<button class="appe-reset nav-tab">
+						<span class="bar"></span>
+						<span class="bar"></span>
+						<span class="bar"></span>
+					</button>
+					<div class="weather">
+						<spana class="s1">흐림</spana><spana class="mg"></spana><spana class="c">35℃</spana>
+					</div>
+					<nav class="gnb">
+						<div class="bg-drop"></div>
+						<ul class="menu cf">
+							<li class="item-0">
+								<img src="../../img/common/logo.png" alt="속초해수욕장 로고"><span class="a-i-x i-x" onclick=""></span>
+								<p class="p-1">
+									가슴벅찬 일출, 시원한 파도<br>
+									대한민국의 자랑, 속초해변으로 오세요
+								</p>
+							</li>
+							<li class="item-1"><a href="../index.html">홈으로 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-1"><a href="../about/">속초해변 소개 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-2"><a href="../tourist/">관광정보 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-2"><a href="../view/">속초8경 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-3"><a href="../waycome/">오시는 길 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-4"><a href="../board/memory_list.html">추억게시판 <span class="ic-rArrow rArrow"></span></a></li>
+							<li class="item-5"><a href="../board/">공지사항 <span class="ic-rArrow rArrow"></span></a></li>
+						</ul>
+					</nav>
+				</div>
 			</div>
 		</header>
 		
@@ -50,8 +70,9 @@
 		
 			<section class="wrap subVisual">
 				<div class="mainTxt container">
-					<p class="p-1">닿는 발길마다 매력 넘치는 고성</p>
-					<h2><span class="f-bd">삼포해변</span> 공지사항</h2>
+					<p class="p-1">시원한 파도, 가슴벅찬 일출!</p>
+					<h2>속초해변 <span class="f-bd">공지사항</span></h2>
+					<p class="p-2"><span class="f-bdr">SOKCHO</span> BEACH</p>
 				</div>
 			</section>
 			<section class="wrap cmStyle board">
@@ -70,35 +91,35 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td>삼포비치 홈페이지가 그랜드 오픈되었습니다.</td>
+									<td>속초비치 홈페이지가 그랜드 오픈되었습니다.</td>
 									<td>2018.07.03</td>
 								</tr>
 								<tr>
-									<td>반짝이는 백사장 위로 쏟아지는 별빛을 볼 수 있는 삼포비치 홈페이지</td>
+									<td>반짝이는 백사장 위로 쏟아지는 별빛을 볼 수 있는 속초비치 홈페이지</td>
 									<td>2018.07.03</td>
 								</tr>
 								<tr>
-									<td>삼포비치 홈페이지가 그랜드 오픈되었습니다.</td>
+									<td>속초비치 홈페이지가 그랜드 오픈되었습니다.</td>
 									<td>2018.07.03</td>
 								</tr>
 								<tr>
-									<td>반짝이는 백사장 위로 쏟아지는 별빛을 볼 수 있는 삼포비치 홈페이지</td>
+									<td>반짝이는 백사장 위로 쏟아지는 별빛을 볼 수 있는 속초비치 홈페이지</td>
 									<td>2018.07.03</td>
 								</tr>
 								<tr>
-									<td>삼포비치 홈페이지가 그랜드 오픈되었습니다.</td>
+									<td>속초비치 홈페이지가 그랜드 오픈되었습니다.</td>
 									<td>2018.07.03</td>
 								</tr>
 								<tr>
-									<td>반짝이는 백사장 위로 쏟아지는 별빛을 볼 수 있는 삼포비치 홈페이지</td>
+									<td>반짝이는 백사장 위로 쏟아지는 별빛을 볼 수 있는 속초비치 홈페이지</td>
 									<td>2018.07.03</td>
 								</tr>
 								<tr>
-									<td>삼포비치 홈페이지가 그랜드 오픈되었습니다.</td>
+									<td>속초비치 홈페이지가 그랜드 오픈되었습니다.</td>
 									<td>2018.07.03</td>
 								</tr>
 								<tr>
-									<td>반짝이는 백사장 위로 쏟아지는 별빛을 볼 수 있는 삼포비치 홈페이지</td>
+									<td>반짝이는 백사장 위로 쏟아지는 별빛을 볼 수 있는 속초비치 홈페이지</td>
 									<td>2018.07.03</td>
 								</tr>
 							</tbody>
@@ -118,12 +139,16 @@
 		
 		<footer class="footer">
 			<div class="wrap container">
-				<figure class="logo"><img src="http://img.sampobeach.co.kr/common/logo.png" alt="삼포해수욕장로고"></figure>
+				<figure class="logo"><img src="../../img/common/logo.png" alt="속초해수욕장로고"></figure>
 				<address>
-					본 사이트는 삼포해변을 사랑하는 마을 주민회에서 운영하고 있습니다.<br>
-					강원도 고성군 죽왕면 삼포해변길 (죽왕면) / 삼포리 1-1번지 삼포해변<br>
-					help@sampobeach.co.kr<br>
-					<small>copyright @ sampobeach.co.kr All right reserved</small>
+					아름다운 속초해변 !  영롱한 바다는 물론이며 주변의 관광지인 <br>
+					설악산, 척산온천, 청초호, 영랑호와 더불어 <br>
+					속초시에 유일한 해수욕장으로 전국적인 사랑을 한 몸에 받고 있습니다.<br>
+					<p class="p-2">
+						본 사이트는 속초해수욕장을 사랑하는 주민자치회가 자체 운영합니다.<br>
+						대한민국 강원도 속초시 조양동 속초해수욕장
+					</p>
+					<small>copyright @ sokchobeach.co.kr All right reserved</small>
 				</address>
 			</div>
 		</footer>
