속초해수욕장 모바일 완료

--- a/views_m/index.html
+++ b/views_m/index.html
@@ -312,7 +312,7 @@
 							<span class="big"><span class="f-bd">속초해변</span> 오시는 길</span>
 						</h2>
 						<div class="way-map">
-							<a href="http://map.daum.net/?urlX=851339&urlY=1305803&itemId=22099937">
+							<a href="https://m.map.daum.net/actions/detailMapView?id=22099937">
 								<img src="../img/map.jpg" alt="오시는 길">
 							</a>
 						</div>
@@ -337,7 +337,8 @@
 								<dt>- 속초시외버스터미널 하차시 </dt>
 								<dd class="dot">
 									<span class="dot">:</span>
-									속초시외버스터미널에서 정류장에서 7-1번, 9-1번, 9번 버스 탑승 후<br>
+									속초시외버스터미널에서 정류장에서<br> 
+									7-1번, 9-1번, 9번 버스 탑승 후<br>
 									고속버스터미널 하차, 동쪽으로 440미터 도보로 이동
 								</dd>
 							</dl>
@@ -371,6 +372,11 @@
 				</address>
 			</div>
 		</footer>
+		
+		<a href="javascript:;" class="btn-top">
+			<span class="arr">▲</span>
+			TOP
+		</a>
 		
 	</div>	
 		
